Contrast fix for footer

--- a/css/local.css
+++ b/css/local.css
@@ -4,7 +4,7 @@ div.first {text-align:left;}
 
 h1 {text-align:left;margin-bottom:1em;margin-top:1em;}
 
-#ft {text-align:left;color:#999;}
+#ft {text-align:left;color:#585858;}
 
 .first { background-color: #efefef;}
 
